Fix tab shadow flicker iOS (4th attempt)

--- a/src/index.css
+++ b/src/index.css
@@ -139,8 +139,6 @@ code {
 }
 
 .shadow {
-  -webkit-box-shadow: 0 1px 6px 0 rgba(0,0,0,0.2);
-  -moz-box-shadow: 0 1px 6px 0 rgba(0,0,0,0.2);
   box-shadow: 0 1px 6px 0 rgba(0,0,0,0.2);
 }
 
